<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TrackerApp</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_contact">Contact</string>
    <string name="title_activity_key">Key</string>
    <string name="title_activity_map">Map</string>

    <string-array name="menu_array">
        <item>Menu</item>
        <item>Help</item>
        <item>Key</item>
        <item>Contact</item>
        <item>About</item>
    </string-array>

    <string name="title_activity_help">Help</string>
    <string name="title_activity_about">About</string>
    <string name="home">Home</string>
    <string name="contact_header">Contact Us</string>
    <string name="about_header">About</string>
    <string name="key_header">Map Key</string>
    <string name="contentDescription">AppLogo</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_chat">Chat</string>
    <string name="send">Send</string>
    <string name="hint">Enter message</string>
    <string name="dialogTitle">Enter a username</string>
    <string name="enterHandle">username</string>
    <string name="signin">Log in</string>
    <string name="cancel">Cancel</string>
    
    <string name="route_select">Select a Route</string>
    <string name="stop_select">Select a Stop</string>

</resources>
