<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey"
    android:weightSum="10"
    tools:context=".Key" >
    
        <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="1"
        android:weightSum="5" >

        <Button
            android:id="@+id/keyMapButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_map" />
		<Button
            android:id="@+id/keyChatButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_chat" />
        <Button
            android:id="@+id/keyKeyButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_key" />

        <Button
            android:id="@+id/keyHelpButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_help" />

        <Button
            android:id="@+id/keyAboutButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_about" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/key_header"
        android:textColor="@color/white" 
        android:textSize="30sp" 
        android:layout_weight="1"
        android:gravity="center" />

    <Button
        android:id="@+id/route_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Button" />

    <Button
        android:id="@+id/stop_button"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="Button" />

</LinearLayout>