<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/dark_grey"
    android:weightSum="10"
    tools:context=".About" >
    
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dp" 
        android:layout_weight="1"
        android:weightSum="4" >

        <Button
            android:id="@+id/aboutMapButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_map" />
		<Button
            android:id="@+id/aboutChatButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_chat" />
        <Button
            android:id="@+id/aboutKeyButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_key" />

        <Button
            android:id="@+id/aboutHelpButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_help" />

        <Button
            android:id="@+id/aboutAboutButton"
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:text="@string/title_activity_about" />

    </LinearLayout>

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:text="@string/title_activity_about"
        android:textColor="@color/white" 
        android:textSize="30sp" 
        android:layout_weight="1"
        android:gravity="center" />

</LinearLayout>